some restyling of the ErrorDisplay/ErrorMessage to make them more readable, and to keep their positions/sizes correct with larger error messages

--- a/front_end/src/components/ErrorDisplay/ErrorDisplay.css
+++ b/front_end/src/components/ErrorDisplay/ErrorDisplay.css
@@ -5,7 +5,7 @@
 	right: 0;
 	top: 0;
 	margin: 1em auto;
-	width: fit-content;
+	width: 50%;
 }
 
 .ErrorDisplay ul {
